--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <footer class="bg-paraguai-blue">
         <div class="container mx-auto px-6 py-4">
             <p class="text-center text-paraguai-white text-sm">
-                &copy; 2024 [Seu Nome]. Todos os direitos reservados.
+                &copy; Gisa Paraguaios - 2°F
             </p>
         </div>
     </footer>
