--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <h2 class="text-3xl font-bold text-center text-paraguai-blue mb-12">Sobre Mim</h2>
             <div class="flex flex-col md:flex-row items-center gap-12">
                 <div class="md:w-1/3">
-                    <img src="https://cubie.com.br/cdn/2025/gisa-2f/paraguaios.jpg" alt="Gisa 2°F Paraguaios" class="rounded-full shadow-lg mx-auto">
+                    <img src="./paraguaios.jpg" alt="Gisa 2°F Paraguaios" class="rounded-full shadow-lg mx-auto">
                 </div>
                 <div class="md:w-2/3">
                     <p class="text-gray-700 leading-relaxed mb-4">
