--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="#home" class="text-2xl font-bold text-paraguai-blue">2°F Paraguaios</a>
             <div class="hidden md:flex space-x-8">
-                <a href="#about" class="nav-link text-gray-600 hover:text-paraguai-red font-medium">Sobre Mim</a>
-                <a href="#projects" class="nav-link text-gray-600 hover:text-paraguai-red font-medium">Projetos</a>
+                <a href="#about" class="nav-link text-gray-600 hover:text-paraguai-red font-medium">É </a>
+                <a href="#projects" class="nav-link text-gray-600 hover:text-paraguai-red font-medium">Nossos Destaques</a>
                 <a href="#contact" class="nav-link text-gray-600 hover:text-paraguai-red font-medium">Contato</a>
             </div>
             <button id="mobile-menu-button" class="md:hidden text-paraguai-blue">
@@ -87,14 +87,14 @@
 
         <section class="text-center py-20">
             <h1 class="text-4xl md:text-6xl font-extrabold text-paraguai-blue mb-4">2°F Paraguaios</h1>
-            <p class="text-lg md:text-xl text-gray-600 max-w-2xl mx-auto mb-8">Sou um [Sua Profissão] apaixonado por criar soluções inovadoras e experiências digitais incríveis.</p>
-            <a href="#projects" class="bg-paraguai-red text-white font-bold py-3 px-8 rounded-lg hover:bg-red-700 transition duration-300">Veja meus trabalhos</a>
+            <p class="text-lg md:text-xl text-gray-600 max-w-2xl mx-auto mb-8">Hermanos, Ey !</p>
+            <a href="https://www.instagram.com/gisa.2fparaguai" class="bg-paraguai-red text-white font-bold py-3 px-8 rounded-lg hover:bg-red-700 transition duration-300">@gisa.2fparaguai</a>
         </section>
 
         <div class="w-full h-1 my-12 bg-gradient-to-r from-paraguai-red via-paraguai-white to-paraguai-blue"></div>
         
         <section id="about" class="py-16">
-            <h2 class="text-3xl font-bold text-center text-paraguai-blue mb-12">Sobre Mim</h2>
+            <h2 class="text-3xl font-bold text-center text-paraguai-blue mb-12">Sobre Nós</h2>
             <div class="flex flex-col md:flex-row items-center gap-12">
                 <div class="md:w-1/3">
                     <img src="https://2fparaguaios.github.io/paraguaios.jpg" alt="Gisa 2°F Paraguaios" class="rounded-full shadow-lg mx-auto">
@@ -143,6 +143,24 @@
                     </div>
                 </div>
 
+                <div class="project-card bg-white rounded-lg shadow-md overflow-hidden">
+                    <img src="https://placehold.co/600x400/FF6B35/FFFFFF?text=Projeto+4" alt="Imagem do Projeto 4" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h3 class="text-xl font-bold text-paraguai-blue mb-2">Nome do Projeto 4</h3>
+                        <p class="text-gray-600 mb-4">Breve descrição do projeto, as tecnologias usadas e o que ele resolve.</p>
+                        <a href="#" class="text-paraguai-red font-semibold hover:underline">Ver Detalhes &rarr;</a>
+                    </div>
+                </div>
+
+                <div class="project-card bg-white rounded-lg shadow-md overflow-hidden">
+                    <img src="https://placehold.co/600x400/00C851/FFFFFF?text=Projeto+5" alt="Imagem do Projeto 5" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h3 class="text-xl font-bold text-paraguai-blue mb-2">Nome do Projeto 5</h3>
+                        <p class="text-gray-600 mb-4">Breve descrição do projeto, as tecnologias usadas e o que ele resolve.</p>
+                        <a href="#" class="text-paraguai-red font-semibold hover:underline">Ver Detalhes &rarr;</a>
+                    </div>
+                </div>
+
             </div>
         </section>
 
@@ -175,4 +193,4 @@
         });
     </script>
 </body>
-</html>
+    </html>
