--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 
                 <div class="project-card bg-white rounded-lg shadow-md overflow-hidden">
-                    <img src="https://placehold.co/600x400/D52B1E/FFFFFF?text=Projeto+1" alt="Imagem do Projeto 1" class="w-full h-48 object-cover">
+                    <img src="https://2fparaguaios.github.io/IMG-20250617-WA0013.jpg" alt="Miss e Mister" class="w-full h-48 object-cover">
                     <div class="p-6">
-                        <h3 class="text-xl font-bold text-paraguai-blue mb-2">Nome do Projeto 1</h3>
+                        <h3 class="text-xl font-bold text-paraguai-blue mb-2">Miss e Mister</h3>
                         <p class="text-gray-600 mb-4">Breve descrição do projeto, as tecnologias usadas e o que ele resolve.</p>
                         <a href="#" class="text-paraguai-red font-semibold hover:underline">Ver Detalhes &rarr;</a>
                     </div>
