--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
                 <div class="project-card bg-white rounded-lg shadow-md overflow-hidden">
                     <img src="https://2fparaguaios.github.io/IMG-20250617-WA0013.jpg" alt="Miss e Mister" class="w-full h-48 object-cover">
                     <div class="p-6">
-                        <h3 class="text-xl font-bold text-paraguai-blue mb-2">Miss e Mister</h3>
-                        <p class="text-gray-600 mb-4">Breve descrição do projeto, as tecnologias usadas e o que ele resolve.</p>
-                        <a href="#" class="text-paraguai-red font-semibold hover:underline">Ver Detalhes &rarr;</a>
+                        <h3 class="text-xl font-bold text-paraguai-blue mb-2">Mister & Miss</h3>
+                        <p class="text-gray-600 mb-4">APRESENTAMOS A VOCÊS NOSSO MISTER & MISS !!</p>
+                        <a href="https://www.instagram.com/p/DKPPLsVugh8" class="text-paraguai-red font-semibold hover:underline">Ver no Instagram &rarr;</a>
                     </div>
                 </div>
 
