--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap" rel="stylesheet">
     
-    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 5 3'%3E%3Crect width='5' height='3' fill='%23D52B1E'/%3E%3Crect width='5' height='2' fill='%23FFFFFF'/%3E%3Crect width='5' height='1' fill='%230038A8'/%3E%3C/svg%3E">
-
+    <!--- <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 5 3'%3E%3Crect width='5' height='3' fill='%23D52B1E'/%3E%3Crect width='5' height='2' fill='%23FFFFFF'/%3E%3Crect width='5' height='1' fill='%230038A8'/%3E%3C/svg%3E"> --->
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
+    
     <script>
         tailwind.config = {
             theme: {
