--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="#home" class="text-2xl font-bold text-paraguai-blue">2°F Paraguaios</a>
             <div class="hidden md:flex space-x-8">
-                <a href="#about" class="nav-link text-gray-600 hover:text-paraguai-red font-medium">Sobre</a>
-                <a href="#projects" class="nav-link text-gray-600 hover:text-paraguai-red font-medium">Nossos Destaques</a>
-                <a href="#contact" class="nav-link text-gray-600 hover:text-paraguai-red font-medium">Contato</a>
+            <a href="https://www.instagram.com/gisa.2fparaguai" target="_blank" class="block py-2 px-4 text-sm hover:bg-gray-100">
+                <i class="fab fa-instagram mr-2"></i>Instagram
+            </a>
             </div>
             <button id="mobile-menu-button" class="md:hidden text-paraguai-blue">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
