--- a/index.html
+++ b/index.html
@@ -112,10 +112,11 @@
                 </div>
                 <div class="md:w-2/3">
                     <p class="text-gray-700 leading-relaxed mb-4">
-                Aaaaaa
+                Bem-vindo ao nosso Paraguai!
+Onde a rica cultura e as belezas naturais do Paraguai ganham vida. Através de fotos, histórias e descobertas,
                     </p>
                     <p class="text-gray-700 leading-relaxed">
-                        Aaaaaaaa </p>
+                        convidamos você a mergulhar nessa jornada única. Cada clique é uma celebração da diversidade paraguaia. Vamos juntos? </p>
                 </div>
             </div>
         </section>
