--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ Onde a rica cultura e as belezas naturais do Paraguai ganham vida. Através de f
                     id: 5,
                     title: "Deveraldo Albuquerque",
                     description: "Professor Orientador do 2° Ano F",
-                    image: "https://2fparaguaios.github.io/IMG-20250617-WA0020.jpg",
+                    image: "https://2fparaguaios.github.io/465570701_1700515944125924_364989083061127969_n.jpg",
                     buttonText: "Ver no Instagram",
                     buttonLink: "https://www.instagram.com/p/DJ74DcFusxq",
                     category: "Orientador"
