--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
                 <div class="md:w-2/3">
                     <p class="text-gray-700 leading-relaxed mb-4">
                 Bem-vindo ao nosso Paraguai!
-Onde a rica cultura e as belezas naturais do Paraguai ganham vida. Através de fotos, histórias e descobertas,
+Onde a rica cultura e as belezas naturais do Paraguai ganham vida. Através de fotos, histórias e descobertas.
                     </p>
                     <p class="text-gray-700 leading-relaxed">
-                        convidamos você a mergulhar nessa jornada única. Cada clique é uma celebração da diversidade paraguaia. Vamos juntos? </p>
+                        Convidamos você a mergulhar nessa jornada única. Cada clique é uma celebração da diversidade paraguaia. Vamos juntos? </p>
                 </div>
             </div>
         </section>
