--- a/comidas-tipicas.html
+++ b/comidas-tipicas.html
@@ -113,7 +113,7 @@
           id: 3,
           name: "Mbeju",
           desc: "Panqueca feita com fécula de mandioca e queijo.",
-          img: "https://upload.wikimedia.org/wikipedia/commons/0/03/Mbeju_paraguayo.jpg",
+          img: "https://en.m.wikipedia.org/wiki/File:Mbey%C3%BA_paraguayo.jpg",
           wiki: "https://pt.wikipedia.org/wiki/Mbeju",
         },
         // Adicione mais comidas conforme desejar
