--- a/comidas-tipicas.html
+++ b/comidas-tipicas.html
@@ -106,7 +106,7 @@
           id: 2,
           name: "Chipa",
           desc: "Pão de queijo crocante por fora e macio por dentro.",
-          img: "https://upload.wikimedia.org/wikipedia/commons/b/b2/Chipa_paraguaya.jpg",
+          img: "https://pt.m.wikipedia.org/wiki/Ficheiro:Chipa_Paraguay.jpg",
           wiki: "https://pt.wikipedia.org/wiki/Chipa",
         },
         {
