--- a/comidas-tipicas.html
+++ b/comidas-tipicas.html
@@ -99,7 +99,7 @@
           id: 1,
           name: "Sopa Paraguaia",
           desc: "Torta salgada de milho, queijo e cebola, tradicionalíssima.",
-          img: "https://upload.wikimedia.org/wikipedia/commons/4/49/Sopa_Paraguaya.jpg",
+          img: "https://pt.m.wikipedia.org/wiki/Ficheiro:Sopa_Paraguaya.jpg",
           wiki: "https://pt.wikipedia.org/wiki/Sopa_paraguaia",
         },
         {
