--- a/comidas-tipicas.html
+++ b/comidas-tipicas.html
@@ -106,7 +106,7 @@
           id: 2,
           name: "Chipa",
           desc: "Pão de queijo crocante por fora e macio por dentro.",
-          img: "https://upload.wikimedia.org/wikipedia/commons/3/31/Mbey%C3%BA_paraguayo.jpg",
+          img: "https://upload.wikimedia.org/wikipedia/commons/thumb/9/9e/Chipa_Paraguay.jpg/1600px-Chipa_Paraguay.jpg",
           wiki: "https://pt.wikipedia.org/wiki/Chipa",
         },
         {
